--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_wordit_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BondWord"
+        android:name=".ApplicationClass"
         tools:targetApi="31">
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -42,6 +44,18 @@
             android:exported="true"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity"/>
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-3801792611280684~3691270366"/>
+<!--        <service-->
+<!--            android:name=".FirebaseMessage"-->
+<!--            android:exported="false">-->
+<!--            <intent-filter>-->
+<!--                <action-->
+<!--                    android:name="com.google.firebase.MESSAGING_EVENT">-->
+<!--                </action>-->
+<!--            </intent-filter>-->
+<!--        </service>-->
     </application>
 
 </manifest>
